adding heading, tex and use tags (strong, em, ul, ol)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <title>Learning HTML</title>
 </head>
 <body>
-    <p>hello, World</p> 
-    <p>this is my first web page!</p>
+    <div>
+        <p>hello, <strong>World</strong></p> 
+        <p>my <small>first</small> web <em>page!</em></p>
+</div>
+<div>
+        <h1>heading 1</h1>
+        <h2>heading 2</h2>
+        <h3>heading 3</h3>
+        <h4>heading 4</h4>
+</div>
+<div>
+        <ul>
+            <li>toyota</li>
+            <li>ford</li>
+            <li>kia</li>
+        </ul>
+        <ol>
+            <li>Janpan</li>
+            <li>USA</li>
+            <li>Koria</li>
+        </ol>
+</div>
 </body>
 </html>
